Corrijo problemas con la imagen de perfil

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="contenedor">
         <header>
             <div class="perfil">
-                <img src="./img/perfil.jpeg" class="img-perfil">
+                <img src="./img/Perfil.jpg" class="img-perfil">
                 <div class="descripcion">
                     <h1>Nicole Neugebauer</h1>
                     <p>Artista</p>
